# ecommerce-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.chart-mcp.yml  compose.nl2sql.yml  compose.sandbox.yml  docker-compose.yml  pyproject.toml
docs/: 2026-05-25-ecommerce-agent-design.md  2026-06-08-week1-foundation-design.md  2026-06-09-m2-approved-action-workflow-design.md  2026-06-09-mature-agent-product-research.md  2026-06-09-product-roadmap.md  2026-06-09-week2-subagents-sandbox-design.md  2026-06-10-m3-codebase-review.md  2026-06-10-m3-operator-console-design.md  2026-06-10-m3-phase2-trace-artifacts-design.md  2026-06-11-m4-routing-eval-design.md  2026-06-12-m4-slice2-conversation-memory-design.md  2026-06-12-m4-slice3-eval-expansion-design.md  2026-06-12-m4-slice4-tool-choice-eval-design.md  2026-06-13-feature-gap-analysis.md  2026-06-13-m4-slice5-identity-rbac-audit-design.md  2026-06-13-m4-slice6-answer-grounding-design.md  2026-06-14-m4-slice7-proactive-monitor-design.md  2026-06-14-m4-slice8-live-turn-status-design.md  2026-06-14-specialist-provider-and-catalog-design.md  2026-06-15-m4-slice11-sandbox-stack-design.md  2026-06-15-m4-slice12-smoke-coverage-design.md  2026-06-17-echarts-artifact-design.md  2026-06-17-nl2sql-analytical-tool-design.md  2026-06-18-agent-shaped-analytics-tools-design.md  2026-06-18-deepagents-skills-workflow-design.md  2026-06-19-stale-order-alert-design.md  development.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
sandbox_executor/: Dockerfile  __init__.py  app.py
sandbox_image/: Dockerfile.sandbox
tests/: test_agents.py  test_analysis_helpers.py  test_analytics_tools.py  test_app.py  test_approval_safety.py  test_approvals.py  test_audit.py  test_auth_api.py  test_auth_dependencies.py  test_auth_models.py  test_auth_stores.py  test_charting_tool.py  test_cli.py  test_config.py  test_evals_metadata.py  test_evidence_capture.py  test_executor_app.py  test_groundedness_eval.py  test_grounding_build.py  test_mcp_client.py  test_models.py  test_mongo_alert_store.py  test_mongo_session_store.py  test_mongo_thread_store.py  test_mongo_trace_store.py  test_monitoring_api.py  test_monitoring_cause.py  test_monitoring_checks.py  test_monitoring_runner.py  test_monitoring_system.py  test_nl2sql_tool_choice.py  test_passwords.py  test_permissions.py  test_prompts.py  test_retention.py  test_role_shaped_runtime.py  (+31 more)
(+172 files in other folders)
