[project]
name = "ecommerce-agent"
version = "0.1.0"
description = "FastAPI and DeepAgents orchestration for an e-commerce operations assistant"
authors = [
    { name = "Hao", email = "felixhuhao@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "pydantic-settings>=2.14.1",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
ecommerce-agent = "ecommerce_agent:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require external services such as the SpringBoot MCP server",
    "live: tests that call a real LLM provider",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
